--- a/LotteryCalculator/Web.config
+++ b/LotteryCalculator/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-LotteryCalculator-20150317090344.mdf;Initial Catalog=aspnet-LotteryCalculator-20150317090344;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="dbConnection" providerName="System.Data.SqlClient" connectionString="Server=tcp:novvp4wh8y.database.windows.net,1433;Database=LotteryResults;User ID=bhduser@novvp4wh8y;Password=TrVpass01!;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
